Added External Files

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ function makeNormal(e){
  				
  				<h1 class="name">RANJITH MARASINGANA</h1>
  				<H3 CLASS="subTitle">RECENT COMPUTER SCIENCE GRADUATE & WEB/FRONT-END/SOFTWARE DEVELOPER</H3>
- 				<a href="//google.com"target="_blank"class="btn resumeBtn btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>  RESUME</a>
+ 				<a href="/Ranjith_MarasinganaHallyAppaji.pdf"target="_blank"class="btn resumeBtn btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>  RESUME</a>
  			</div>
  			<div class="col-md-4 colw">
  				
