--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ function makeNormal(e){
 								<li>
 									<a href="#uta" data-toggle="modal" class="itci">
 										<img class="origcul"src="utaLogo.png"/>
-										<img id="utaHoverImg"class="itcimage utaHover" src="Hover.jpg"/>
+										<img id="utaHoverImg"class="itcimage utaHover" src="hover.jpg"/>
 										<p id="utaText1ID"class="ctext utaText1">MASTER IN COMPUTER SCIENCE</p>
 										<p id="utaText2ID"class="ctext utaText2">FALL 2015</p>
 										<div class="Hoveruta"></div>
@@ -596,7 +596,7 @@ function makeNormal(e){
 								<li>
 									<a href="#cmr" data-toggle="modal" class="itci">
 										<img  class="origitc cmrorig" src="cmritlogo.png"/>
-										<img  id="cmrHoverImg"class="itcimage2 cmrHover" src="Hover.jpg"/>
+										<img  id="cmrHoverImg"class="itcimage2 cmrHover" src="hover.jpg"/>
 										<p id="cmrText1ID" class="itext utaText1 cmrText1">BACHELOR of ELECTRICAL ENGINEERING</p>
 
 										<p id="cmrText2ID"class="ctext utaText2 cmrText2">JUNE 2011</p>
@@ -625,7 +625,7 @@ function makeNormal(e){
 								<li>
 									<a href="#culture" data-toggle="modal" class="itci">
 										<img class="origcul"src="culturepicl.jpg"/>
-										<img id="cfHoverImg" class="itcimage" src="Hover.jpg"/>
+										<img id="cfHoverImg" class="itcimage" src="hover.jpg"/>
 										<p id="cfText1ID" class="ctext utaText1 cfText1">WEB DEVELOPER INTERN</p>
 										<p id="cfText2ID" class="ctext utaText2 cfText2">AUG 2015- DEC 2015</p>
 										<div class="Hovercf"></div>
@@ -634,7 +634,7 @@ function makeNormal(e){
 								<li>
 									<a href="#itc" data-toggle="modal" class="itci">
 										<img class="origitc" src="itcpic.png"/>
-										<img id="itcHoverImg" class="itcimage2" src="Hover.jpg"/>
+										<img id="itcHoverImg" class="itcimage2" src="hover.jpg"/>
 										<p id="itcText1ID" class="itext utaText1 itcText1">ASSOCIATE IT CONSULTANT</p>
 										<p id="itcText2ID"class="ctext utaText2 itcText2">SEP 2011- JUN 2013</p>
 										<div class="Hoveritc"></div>
