Added Site ICon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>RANJITH MARASINGANA HALLY APPAJI</title>
+	<link rel="shortcut icon" type="image/jpg" href="R_Logo.jpg">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Quantico:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -153,7 +155,7 @@ width:238px;
     	    font-family: Quantico, sans-serif;
     top: -20px!important;
    
-    font-size: 14pt!important;
+    font-size: 13pt!important;
     line-height: 1;
     width: 202px;
     text-align: center;
@@ -175,16 +177,15 @@ width:238px;
 
 }
 .cmrHover{
-	    top: -37px !important;
+	top: -37px !important;
     height: 108px !important;
 }
 
 .utaText2{
-	    font-family: Quantico, sans-serif;
+	font-family: Quantico, sans-serif;
     line-height: 10.6;
-    font-size: 12pt !important;
+    font-size: 11pt !important;
     text-align: center;
-   
     width:202px!important;
 }
 
@@ -558,9 +559,9 @@ function makeNormal(e){
  						<div class="col-xs-9 colpad">
 							<ul class="colco detailsPad">
 								<li>+1 (682) 248-2168</li>
-								<li><a href="mailto:ranjithma590@gmail.com" target="_blank">ranjithma590@gmail.com</a></li>
-								<li><a href="http://in.linkedin.com/in/ranjithmauta">in.linkedin.com/in/ranjithmauta</a></li>
-								<li><a href="www.ranjithmarasingana.com">ranjithmarsingana.com</a></li>
+								<li><a href="mailto:ranjithma590@gmail.com">ranjithma590@gmail.com</a></li>
+								<li><a href="http://in.linkedin.com/in/ranjithmauta" target="_blank">in.linkedin.com/in/ranjithmauta</a></li>
+								<li><a href="http://www.ranjithmarasingana.com" target="_blank">ranjithmarasingana.com</a></li>
 								<li>ARLINGTON, TEXAS</li>
 		    				</ul>
 							
