--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>RANJITH MARASINGANA HALLY APPAJI</title>
-	<link rel="shortcut icon" type="image/jpg" href="R_Logo.jpg">
+	<link rel="shortcut icon" type="image/png" href="R_Logo.png">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Quantico:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -102,18 +102,18 @@
     		margin-top:3px;
     	}
     	.itci{
-position:relative;
-text-decoration: none!important;
+			position:relative;
+			text-decoration: none!important;
 
     }
     .itcimage{
-     position: absolute;
-    left: 0px;
-    opacity: .96;
-    width: 100%;
-    height: 341%;
-    z-index: 2;
-    top: -18px;
+	     position: absolute;
+	    left: 0px;
+	    opacity: .96;
+	    width: 100%;
+	    height: 350%;
+	    z-index: 2;
+	    top: -18px;
     }
      .itcimage2{
  position: absolute;
@@ -147,23 +147,20 @@ text-decoration: none!important;
     }
     .origcul{
     	z-index: 1;
-    
-width:238px;
+		width:238px;
 
     }
     .utaText1{
-    	    font-family: Quantico, sans-serif;
-    top: -20px!important;
-   
-    font-size: 13pt!important;
-    line-height: 1;
-    width: 202px;
-    text-align: center;
+    	font-family: Quantico, sans-serif;
+    	top: -14px!important;
+   		font-size: 13pt!important;
+    	line-height: 1;
+   		width: 202px;
+    	text-align: center;
     }
  .origitc{
-    	z-index: 1;
-    	
-width:238px;
+    	z-index: 1;   	
+		width:238px;
     }
 
 .cmrorig{
@@ -199,18 +196,17 @@ width:238px;
     top: -16px!important;
 }
 .cfText1{
-	    width: 217px;
-
+	width: 217px;
     line-height: 4;
     text-align: center;
     left: 10px;
-        top: -38px !important;
+    top: -34px !important;
 }
 .cfText2{
-	    line-height: 9.5;
+	    line-height: 10;
 }
 .itcText2{
-	line-height: 10 !important;
+	line-height: 11 !important;
 	    font-size: 11pt !important;
 }
 .itcText1{
