--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Quantico:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Teko:400,300,500,600,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <style>
@@ -167,6 +169,18 @@
   height: 	111px;
   padding-top: 10px;
 }
+.linkedInIcon{
+    		font-size: 19pt;
+    	}
+    	.webIcon{
+    		  font-size: 22pt;
+    position: relative;
+    top: -8px;
+    	}
+    		.homeIcon{
+    		    position: relative;
+    top: -11px;
+    	}
 
 .utaHover{
     top: -26px !important;
@@ -380,6 +394,20 @@ a{
 .colco1 li{
 	font-size: 11pt !important;
 }
+.homeIcon{
+	top:-16px;
+}
+.webIcon{
+	font-size: 17pt;
+    top: -9px;
+}
+.linkedInIcon{
+	font-size: 14pt;
+}
+.mainIcon{
+	position: relative;
+    top: -1px;
+}
 .titleStyling{
 	padding-left: 5px;
 
@@ -531,13 +559,13 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 contactIcon colg">
- 						<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+ 						<span class="mainIcon glyphicon glyphicon-list-alt" aria-hidden="true"></span>
  						<ul class="colco1">
  							<li><span class="glyphicon glyphicon-phone" aria-hidden="true"></span></li>
  							<li><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span></li>
- 							<li><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></li>
- 							<li><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></li>
- 							<li><span class="glyphicon glyphicon-home" aria-hidden="true"></span></li>
+ 							<li><span class="linkedInIcon fa fa-linkedin" aria-hidden="true"></span></li>
+ 							<li><span class="webIcon glyphicon glyphicon-list-alt" aria-hidden="true"></span></li>
+ 							<li><span class="homeIcon glyphicon glyphicon-home" aria-hidden="true"></span></li>
  						</ul>
  					</div>
  					<div class="col-xs-10 colt coltt">
@@ -982,7 +1010,7 @@ function makeNormal(e){
 				 		<li>As a Blackberry Administrator, worked on Blackberry Enterprise Servers in Lotus Domino and Microsoft Exchange environments to meet organizational and end-user needs.</li>
 				 		<li>Troubleshot Mail flow, Address book and Calendar issues faced by Blackberry users.</li>
   						<li>Migrated users from Domino BES environment to Exchange BES environment.</li>
-    					<li>Managed server operations and Blackberry database in a high availability environment with a team of 6 engineers.</li>
+    					<li>Managed server operations and Blackberry database in a high availability environment with a team of 6 engineers.</li><li>Won Spot Award and Appreciation for proactively monitoring and raising the alarm, when the issue occurred, to contain the situation and take necessary steps for restoration.</li>
     			</ul>
     			</p>
 			</div>
