--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ function makeNormal(e){
  							<li><span class="glyphicon glyphicon-phone" aria-hidden="true"></span></li>
  							<li><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span></li>
  							<li><span class="linkedInIcon fa fa-linkedin" aria-hidden="true"></span></li>
- 							<li><span class="webIcon glyphicon glyphicon-list-alt" aria-hidden="true"></span></li>
+ 							<li><span class="webIcon fi fi-web" aria-hidden="true"></span></li>
  							<li><span class="homeIcon glyphicon glyphicon-home" aria-hidden="true"></span></li>
  						</ul>
  					</div>
