--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ a{
 }
 .mainIcon{
 	position: relative;
-    top: -1px;
+    top: -1px !important;
 }
 .titleStyling{
 	padding-left: 5px;
@@ -563,7 +563,7 @@ function makeNormal(e){
  						<ul class="colco1">
  							<li><span class="glyphicon glyphicon-phone" aria-hidden="true"></span></li>
  							<li><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span></li>
- 							<li><span class="linkedInIcon fa fa-linkedin" aria-hidden="true"></span></li>
+ 							<li><span class="linkedInIcon fa fa-linkedin-square" aria-hidden="true"></span></li>
  							<li><span class="webIcon fi fi-web" aria-hidden="true"></span></li>
  							<li><span class="homeIcon glyphicon glyphicon-home" aria-hidden="true"></span></li>
  						</ul>
