--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
     
 
 }
+.mainIcon{
+	position: relative;
+    top: -1px !important;
+}
 .Hoveritc{
 height: 126px;
     position: absolute;
@@ -387,7 +391,10 @@ a{
 }
 }
 @media screen and (max-width:375px){
-
+.mainIcon{
+	
+   left:-5px;
+}
 .colco li{
 	font-size: 9pt;
 }
@@ -404,10 +411,7 @@ a{
 .linkedInIcon{
 	font-size: 14pt;
 }
-.mainIcon{
-	position: relative;
-    top: -1px !important;
-}
+
 .titleStyling{
 	padding-left: 5px;
 
