--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
     z-index: 2;
 
     }
+    .eduIcon{
+    	font-size:23pt;
+    }
+    .expIcon{
+		font-size: 	20pt;
+    }
+    .projIcon{
+    	font-style: 23pt;
+    }
     .ctext{
   position: absolute;
     top: -54px;
@@ -337,6 +346,11 @@ height: 126px;
 .fontWeight{
 	font-weight: bold;
 	text-decoration: none!important;
+}
+.technicalIcon{
+	font-size: 20pt;
+    position: relative;
+    top: 2px;
 }
 .panel-title a:hover{
 	text-decoration: none;
@@ -606,7 +620,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="eduIcon glyphicon glyphicon-user" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt">
  						<h2>EDUCATION</h2>
@@ -644,7 +658,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="expIcon glyphicon glyphicon-user" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt colex">
  						<h2>EXPERIENCE</h2>
@@ -680,7 +694,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="technicalIcon glyphicon glyphicon-user" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt">
  						<h2>TECHNICAL SKILLS</h2>
@@ -722,7 +736,7 @@ function makeNormal(e){
  			<div class="row">
  				<div class=" colm col-md-4">
  				<div class="colg col-xs-2 projectIcons">
- 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="projIcon glyphicon glyphicon-user" aria-hidden="true"></span>
  				</div>
  				<div class="col-xs-10 colt">
  					<h2 CLASS="">PROJECTS</h2>
