--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="eduIcon glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="eduIcon glyphicon glyphicon-education" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt">
  						<h2>EDUCATION</h2>
@@ -658,7 +658,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="expIcon glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="expIcon glyphicon glyphicon-briefcase" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt colex">
  						<h2>EXPERIENCE</h2>
@@ -694,7 +694,7 @@ function makeNormal(e){
  				</div>
  				<div class="row">
  					<div class="col-xs-2 colg">
- 						<span class="technicalIcon glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="technicalIcon glyphicon glyphicon-book" aria-hidden="true"></span>
  					</div>
  					<div class="col-xs-10 colt">
  						<h2>TECHNICAL SKILLS</h2>
@@ -736,7 +736,7 @@ function makeNormal(e){
  			<div class="row">
  				<div class=" colm col-md-4">
  				<div class="colg col-xs-2 projectIcons">
- 						<span class="projIcon glyphicon glyphicon-user" aria-hidden="true"></span>
+ 						<span class="projIcon fa fa-laptop" aria-hidden="true"></span>
  				</div>
  				<div class="col-xs-10 colt">
  					<h2 CLASS="">PROJECTS</h2>
