--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ width: 238px;
     	height: 284px;
     }
     #cfHoverImg, #itcHoverImg {
-    	width:98.25% !important;
+    	width:98.5% !important;
     }
     @media screen and (max-width:1199px) and (min-width:992px){
     	.coltt{
@@ -502,6 +502,12 @@ width: 238px;
 			width: 258px;
 			margin-left: -6px;
     	}
+    	#cfHoverImg, #itcHoverImg {
+    	width:100% !important;
+    }
+    #cmrHoverImg{
+		width: 100%;
+	}
     	.colpad1{
     		margin-left: -6px;
 			padding-right: 0px;
