--- a/index.html
+++ b/index.html
@@ -404,6 +404,12 @@ a{
 .skillsM1{
 	padding-left: 30px !important;
 }
+.eduHeight{
+	height: 350px;
+}
+.contactHeight{
+	height: 341px;
+}
 
 }
 @media screen and (min-width:992px) and (max-width:1133px){
@@ -501,6 +507,12 @@ width: 238px;
     		padding-right: 0px;
 			width: 258px;
 			margin-left: -6px;
+    	}
+    	.contactHeight{
+    		height: 349px;
+    	}
+    	.eduHeight{
+    		height: 351px;
     	}
     	#cfHoverImg, #itcHoverImg {
     	width:100% !important;
@@ -718,7 +730,7 @@ $('#uta').modal('show');
  			</div>
  		</div>
  		<div class="row Secondrow">
- 			<div class="colw colhe colm col-md-4">
+ 			<div class="colw colhe colm col-md-4 eduHeight">
  				<div class="row">
  					<span class="pull-right" aria-hidden="true"><img src="http://demo.pixeden.com/pixeden/creative-resume/img/corner-dot.png"/></span>
  				</div>
@@ -755,7 +767,7 @@ $('#uta').modal('show');
  				</div>
  				
  			</div>
- 			<div class="col-md-4 colhe colw">
+ 			<div class="col-md-4 colhe colw eduHeight">
  			
  				<div class="row">
  					<span class="pull-right" aria-hidden="true"><img src="http://demo.pixeden.com/pixeden/creative-resume/img/corner-dot.png"/></span>
