--- a/index.html
+++ b/index.html
@@ -557,6 +557,11 @@ width: 238px;
 }
 
 }
+@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) {
+    .readMore {
+        margin-bottom: 18px;
+    }
+}
 
     </style>
     <script>
