--- a/index.html
+++ b/index.html
@@ -561,6 +561,11 @@ width: 238px;
     .readMore {
         margin-bottom: 18px;
     }
+    @media screen and (min-width:992px) and (max-width:1199px){
+    	 .readMore {
+        margin-bottom: 19px;
+    }
+    }
 }
 
     </style>
