Project Link Changed

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@ $('#uta').modal('show');
 	 					<div class="panel-heading">
 	 						<h4 class="panel-title">
 	 							<a href="#Project3" data-toggle="collapse" data-parent="#accordion"><i class="indicator glyphicon glyphicon-chevron-up pull-right"></i>A Dropbox-like Storage System</a>
-	 							<a href="http://utabox-env.elasticbeanstalk.com/login.php" target="_blank"><i class="glyphicon glyphicon-link webLink"></i></a>
+	 							<a href="http://utabox-env.us-west-2.elasticbeanstalk.com/login.php" target="_blank"><i class="glyphicon glyphicon-link webLink"></i></a>
 	 						</h4>
 	 					</div>
 	 					<div class="collapse panel-collapse" id="Project3">
