New Project Addition

--- a/index.html
+++ b/index.html
@@ -935,6 +935,20 @@ $('#uta').modal('show');
 	 				<div class="panel panel-default">
 	 					<div class="panel-heading">
 	 						<h4 class="panel-title">
+	 							<a href="#Project41" data-toggle="collapse" data-parent="#accordion"><i class="indicator glyphicon glyphicon-chevron-up pull-right"></i>Assisted Diagnosis Healthcare Information System</a>
+	 						</h4>
+	 					</div>
+	 					<div class="collapse panel-collapse" id="Project41">
+	 						<div class="panel-body">
+							<p>A Healthcare web application that predicts possible diagnosis for each symptom & get additional information on each predicted diagnosis.</p>
+	 						<b>Tools/Technology: </b>Node.js, MySQL, Socket.io, HTML5/CSS3, jQuery & Bootstrap3.
+	 						</div>
+	 						
+	 					</div>
+	 				</div>
+	 				<div class="panel panel-default">
+	 					<div class="panel-heading">
+	 						<h4 class="panel-title">
 	 							<a href="#Project5" data-toggle="collapse" data-parent="#accordion"><i class="indicator glyphicon glyphicon-chevron-up pull-right"></i>Software as a Service with Dropbox API</a>
 	 						</h4>
 	 					</div>
