Changes after getting the job

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ $('#uta').modal('show');
  			<div class="col-md-4 titleStyling">
  				
  				<h1 class="name">RANJITH MARASINGANA</h1>
- 				<H3 CLASS="subTitle">RECENT COMPUTER SCIENCE GRADUATE & WEB/FRONT-END/SOFTWARE DEVELOPER</H3>
+ 				<H3 CLASS="subTitle">WEB DEVELOPER</H3>
  				<a href="/Ranjith_MarasinganaHallyAppaji.pdf"target="_blank"class="btn resumeBtn btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>  RESUME</a>
  			</div>
  			<div class="col-md-4 colw">
@@ -690,10 +690,9 @@ $('#uta').modal('show');
  						<p>
 							<ul class="aboutMe1">
 								<li>Programming skills in  PHP, Javascript, jQuery, AJAX, Bootstrap3, WordPress, HTML5/CSS3, Java and SQL.</li>
-								<li>Internship experience in Web Development.</li>
+								<li>Experience in Web Development.</li>
 								<li>Two years of experience in system administration (Blackberry Enterprise Server).</li>
 		    				</ul>
-							<p class="aboutMe2" style="font-size:16px;">Actively seeking full time opportunities in Software Development.</p>
  						</p>
  					</div>
  				</div>
@@ -732,7 +731,7 @@ $('#uta').modal('show');
 								<li><a href="mailto:ranjithma590@gmail.com">ranjithma590@gmail.com</a></li>
 								<li><a href="http://in.linkedin.com/in/ranjithmauta" target="_blank">in.linkedin.com/in/ranjithmauta</a></li>
 								<li><a href="http://www.ranjithmarasingana.com" target="_blank">ranjithmarasingana.com</a></li>
-								<li>ARLINGTON, TEXAS</li>
+								<li>HOUSTON, TEXAS</li>
 		    				</ul>
 							
  						</div>
