--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@ $('#uta').modal('show');
 								<li>Experience in Web Development.</li>
 								<li>Two years of experience in system administration (Blackberry Enterprise Server).</li>
 		    				</ul>
+							<p class="aboutMe2" style="font-size:16px;">Actively seeking full time opportunities in Software Development.</p>
  						</p>
  					</div>
  				</div>
