--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ $('#uta').modal('show');
  						<h2>ABOUT ME</h2>
  						<p>
 							<ul class="aboutMe1">
-								<li>Programming skills in  PHP, Javascript, jQuery, AJAX, Bootstrap3, WordPress, HTML5/CSS3, Java and SQL.</li>
+								<li>Programming skills in  PHP, Javascript, jQuery, AJAX, Bootstrap3, WordPress, HTML5/CSS3, Amazon Web Services, Java and SQL.</li>
 								<li>Experience in Web Development.</li>
 								<li>Two years of experience in system administration (Blackberry Enterprise Server).</li>
 		    				</ul>
