--- a/index.html
+++ b/index.html
@@ -794,21 +794,28 @@ $('#uta').modal('show');
  					<div class="colt colex logosStyling">
 							<ul>
 								<li>
+									<a href="#owdt" data-toggle="modal" class="itci">
+									OWDT LLC.
+									</a>
+								</li>
+								<li> 
 									<a href="#culture" data-toggle="modal" class="itci">
-										<img class="origcul"src="culturepicl.jpg"/>
+									Culture Farm
+										<!--<img class="origcul"src="culturepicl.jpg"/>
 										<img id="cfHoverImg" class="itcimage" src="hover.jpg"/>
 										<p id="cfText1ID" class="ctext utaText1 cfText1">WEB DEVELOPER INTERN</p>
 										<p id="cfText2ID" class="ctext utaText2 cfText2">AUG 2015- DEC 2015</p>
-										<div class="Hovercf"></div>
+										<div class="Hovercf"></div>-->
 									</a>
 								</li>
 								<li>
 									<a href="#itc" data-toggle="modal" class="itci">
-										<img class="origitc" src="itcpic.png"/>
+									ITC Infotech India LTD.
+									<!--<img class="origitc" src="itcpic.png"/>
 										<img id="itcHoverImg" class="itcimage2" src="hover.jpg"/>
 										<p id="itcText1ID" class="itext utaText1 itcText1">ASSOCIATE IT CONSULTANT</p>
 										<p id="itcText2ID"class="ctext utaText2 itcText2">SEP 2011- JUN 2013</p>
-										<div class="Hoveritc"></div>
+										<div class="Hoveritc"></div>-->
 									</a>
 								</li>
 		    				</ul>
@@ -1176,6 +1183,28 @@ $('#uta').modal('show');
 			</div>
 			<div class="modal-footer">
 					<h4 class="pull-left"></h4>
+				<a class="btn btn-primary" data-dismiss="modal">Close</a>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="modal fade" id="owdt" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4><b>Web Developer</b><span class="pull-right">Aug 2016 - Present</span></h4>
+			</div>
+			<div class="modal-body">
+				<p><b>TOOLS/TECHNOLOGY:</b> Javascript, jQuery, PHP, WordPress, Bootstrap3, HTML5/CSS3.
+				 <ul>
+					<li>Developed and refactored interactive websites based on client requirement by collaborating with UI/UX designers.</li>
+					<li>Scripted dynamic features into the website and troubleshot any existing issues.</li>
+					<li>Modified Wordpress plugins to implement custom features based on client requirement.</li>
+    			</ul>
+    			</p>
+			</div>
+			<div class="modal-footer">
+					<h5 class="pull-left">OWDT LLC, Houston, Texas</h5>
 				<a class="btn btn-primary" data-dismiss="modal">Close</a>
 			</div>
 		</div>
